--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
+  border: none;
+  margin: 40px auto;
+  padding: 3rem;
+  width: 40%;
+  border-radius: 5px;
+  /* background-color: #ffe; */
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.to-do-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
+}
+
+.to-do-container ul li {
+  width: 170px;
+  overflow-wrap: break-word;
+  list-style-type: "👉";
+  cursor: pointer;
+}
+input {
+  width: 100%;
+  padding: 1rem;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+.btn {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 50px;
+}
+
+.btn button {
+  background-color: #290818;
   color: white;
+  border: 1px solid #e2bfb3;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.done {
+  text-decoration: line-through;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+  width: 300px;
+}
+.item:last-child {
+  border-bottom: none;
+}
+.trash {
+  cursor: pointer;
 }
